Fix for search controls in header being stuck together

--- a/src/scss/features/_glitch.scss
+++ b/src/scss/features/_glitch.scss
@@ -1,7 +1,6 @@
 .with-glitch {
   .glitch {
     text-decoration: none;
-    margin: 0;
     position: relative;
     display: block;
   }
